mais uma vez comitando

--- a/crunch/home.html
+++ b/crunch/home.html
@@ -80,27 +80,43 @@
     <div class="filrec_content">
       <div>
         <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Full metal the movie.jpg" alt=""></a>
-        <p>Exemplo 1</p>
+        <p class="titu">Fullmetal Alchemist: <br>The Conqueror of Shamballa</p>
+        <p class="legenda">Legendado</p>
+
       </div>
       <div>
         <a href="filmeModelo.html"><img class="film" src="imgs/filmes/DBS_1.jpg" alt=""></a>
-        <p>Exemplo 1</p>
+        <p class="titu">Dragon Ball Super: <br>SUPER HERO</p>
+        <p class="legenda">Dub|Leg</p>
+
+
       </div>
       <div>
-        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Goblin slayer.jpg" alt=""></a>
-        <p>Exemplo 1</p>
+        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Jujutsu 0.jpg" alt=""></a>
+        <p class="titu">JUJUTSU KAISEN 0</p>
+        <p class="legenda">Dub|Leg</p>
+
+
       </div>
       <div>
         <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Haikyu-the-movie.jpg" alt=""></a>
-        <p>Exemplo 1</p>
+        <p class="titu">HAIKYU!! <br>A Batalha de Conceitos</p>
+        <p class="legenda">Legendado</p>
+
+
       </div>
       <div>
         <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Given-the-movie.jpg" alt=""></a>
-        <p>Exemplo 1</p>
+        <p class="titu">Given - The Movie</p>
+        <p class="legenda">Legendado</p>
+
+
       </div>
       <div>
         <a href="filmeModelo.html"><img class="film" src="imgs/filmes/The stranger by the shore.jpe" alt=""></a>
-        <p>Exemplo 1</p>
+        <p class="titu">The Stranger by the Shore</p>
+        <p class="legenda">Dub|Leg</p>
+
       </div>
     </div>
   </section>
@@ -110,27 +126,37 @@
     <div class="serec_content">
       <div>
         <a href="seriesmodelo.html""><img class=" film" src="imgs/series/hunter hunter.jpe" alt=""></a>
-        <p>Exemplo 1</p>
+        <p class="titu">Hunter x Hunter</p>
+        <p class="legenda">Legendado</p>
       </div>
       <div>
         <a href="seriesmodelo.html""><img class=" film" src="imgs/series/chainsaw man.jpe" alt=""></a>
-        <p>Exemplo 1</p>
+        <p class="titu">Chainsaw Man</p>
+        <p class="legenda">Dub|Leg</p>
       </div>
       <div>
         <a href="seriesmodelo.html""><img class=" film" src="imgs/my-hero.jpg" alt=""></a>
-        <p>Exemplo 1</p>
+        <p class="titu">My Hero Academia</p>
+        <p class="legenda">Dub|Leg</p>
+
       </div>
       <div>
         <a href="seriesmodelo.html""><img class=" film" src="imgs/series/One piece.jpe" alt=""></a>
-        <p>Exemplo 1</p>
+        <p class="titu">One Piece</p>
+        <p class="legenda">Legendado</p>
+
       </div>
       <div>
         <a href="seriesmodelo.html""><img class=" film" src="imgs/series/Spy Family.jpe" alt=""></a>
-        <p>Exemplo 1</p>
+        <p class="titu">SPY x FAMILY</p>
+        <p class="legenda">Dub|Leg</p>
+
       </div>
       <div>
         <a href="seriesmodelo.html""><img class=" film" src="imgs/series/Shingeki.jpe" alt=""></a>
-        <p>Exemplo 1</p>
+        <p class="titu">Attack on Titan</p>
+        <p class="legenda">Dub|Leg</p>
+
       </div>
     </div>
   </section>
