--- a/crunch/home.html
+++ b/crunch/home.html
@@ -47,7 +47,7 @@
     <div class="top3_content">
       <div class="box">
         <span class="number">1</span>
-        <a class="a-img" href="seriesmodelo.html"><img class="top1" src="imgs/series/Dragon Ball.jpe" alt="Dragin_Ball"></a>
+        <a class="a-img" href="seriesmodelo.html"><img class="top1 outline" src="imgs/series/Dragon Ball.jpe" alt="Dragin_Ball"></a>
       </div>
       <div class="desca">
         <p class="desca">Dragon Ball Super</p>
@@ -56,7 +56,7 @@
 
       <div class="box">
         <span class="number">2</span>
-        <a class="a-img" href="filmeModelo.html"><img class="top1" src="imgs/filmes/Demon slayer mugen train.jpg" alt="Dragin_Ball"></a>
+        <a class="a-img" href="filmeModelo.html"><img class="top1 outline" src="imgs/filmes/Demon slayer mugen train.jpg" alt="Dragin_Ball"></a>
       </div>
       <div class="desca1">
       <p class="desca1">Demon Slayer: <br>Kimetsu no Yaiba Mugen Train</p>
@@ -65,7 +65,7 @@
 
       <div class="box">
         <span class="number">3</span>
-        <a class="a-img" href="seriesmodelo.html"><img class="top1" src="imgs/series/Spy Family.jpe" alt="Dragin_Ball"></a>
+        <a class="a-img" href="seriesmodelo.html"><img class="top1 outline" src="imgs/series/Spy Family.jpe" alt="Dragin_Ball"></a>
       </div>
       <div class="desca2">
       <p class="desca2">SPY x FAMILY</p>
@@ -79,27 +79,27 @@
     <h2 class="tito">Filmes Adicionados Recentemente</h2>
     <div class="filrec_content">
       <div>
-        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Full metal the movie.jpg" alt=""></a>
+        <a href="filmeModelo.html"><img class="film outline" src="imgs/filmes/Full metal the movie.jpg" alt=""></a>
         <p>Exemplo 1</p>
       </div>
       <div>
-        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/DBS_1.jpg" alt=""></a>
+        <a href="filmeModelo.html"><img class="film outline" src="imgs/filmes/DBS_1.jpg" alt=""></a>
         <p>Exemplo 1</p>
       </div>
       <div>
-        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Goblin slayer.jpg" alt=""></a>
+        <a href="filmeModelo.html"><img class="film outline" src="imgs/filmes/Goblin slayer.jpg" alt=""></a>
         <p>Exemplo 1</p>
       </div>
       <div>
-        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Haikyu-the-movie.jpg" alt=""></a>
+        <a href="filmeModelo.html"><img class="film outline" src="imgs/filmes/Haikyu-the-movie.jpg" alt=""></a>
         <p>Exemplo 1</p>
       </div>
       <div>
-        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/Given-the-movie.jpg" alt=""></a>
+        <a href="filmeModelo.html"><img class="film outline" src="imgs/filmes/Given-the-movie.jpg" alt=""></a>
         <p>Exemplo 1</p>
       </div>
       <div>
-        <a href="filmeModelo.html"><img class="film" src="imgs/filmes/The stranger by the shore.jpe" alt=""></a>
+        <a href="filmeModelo.html"><img class="film outline" src="imgs/filmes/The stranger by the shore.jpe" alt=""></a>
         <p>Exemplo 1</p>
       </div>
     </div>
@@ -109,27 +109,27 @@
     <h2 class="tito">Animes Que Acabaram de Chegar</h2>
     <div class="serec_content">
       <div>
-        <a href="seriesmodelo.html""><img class=" film" src="imgs/series/hunter hunter.jpe" alt=""></a>
+        <a href="seriesmodelo.html""><img class=" film outline" src="imgs/series/hunter hunter.jpe" alt=""></a>
         <p>Exemplo 1</p>
       </div>
       <div>
-        <a href="seriesmodelo.html""><img class=" film" src="imgs/series/chainsaw man.jpe" alt=""></a>
+        <a href="seriesmodelo.html""><img class=" film outline" src="imgs/series/chainsaw man.jpe" alt=""></a>
         <p>Exemplo 1</p>
       </div>
       <div>
-        <a href="seriesmodelo.html""><img class=" film" src="imgs/my-hero.jpg" alt=""></a>
+        <a href="seriesmodelo.html""><img class=" film outline" src="imgs/my-hero.jpg" alt=""></a>
         <p>Exemplo 1</p>
       </div>
       <div>
-        <a href="seriesmodelo.html""><img class=" film" src="imgs/series/One piece.jpe" alt=""></a>
+        <a href="seriesmodelo.html""><img class=" film outline" src="imgs/series/One piece.jpe" alt=""></a>
         <p>Exemplo 1</p>
       </div>
       <div>
-        <a href="seriesmodelo.html""><img class=" film" src="imgs/series/Spy Family.jpe" alt=""></a>
+        <a href="seriesmodelo.html""><img class=" film outline" src="imgs/series/Spy Family.jpe" alt=""></a>
         <p>Exemplo 1</p>
       </div>
       <div>
-        <a href="seriesmodelo.html""><img class=" film" src="imgs/series/Shingeki.jpe" alt=""></a>
+        <a href="seriesmodelo.html""><img class=" film outline" src="imgs/series/Shingeki.jpe" alt=""></a>
         <p>Exemplo 1</p>
       </div>
     </div>
