Alterei o top 3 na home e ajeitei os nomes de cada aba

--- a/crunch/home.html
+++ b/crunch/home.html
@@ -47,28 +47,28 @@
     <div class="top3_content">
       <div class="box">
         <span class="number">1</span>
-        <a class="a-img" href="seriesmodelo.html"><img class="top1 outline" src="imgs/series/Dragon Ball.jpe" alt="Dragin_Ball"></a>
+        <a class="a-img" href="seriesmodelo.html"><img class="top1 outline1" src="imgs/series/Dragon Ball.jpe" alt="Dragin_Ball"></a>
       </div>
       <div class="desca">
-        <p class="desca">Dragon Ball Super</p>
+        <p class="desca"><strong>Dragon Ball Super</strong></p>
         <p class="desca"><span class="legen">Dub|Leg</span></p>
       </div>
 
       <div class="box">
         <span class="number">2</span>
-        <a class="a-img" href="filmeModelo.html"><img class="top1 outline" src="imgs/filmes/Demon slayer mugen train.jpg" alt="Dragin_Ball"></a>
+        <a class="a-img" href="filmeModelo.html"><img class="top1 outline1" src="imgs/filmes/Demon slayer mugen train.jpg" alt="Dragin_Ball"></a>
       </div>
       <div class="desca1">
-      <p class="desca1">Demon Slayer: <br>Kimetsu no Yaiba Mugen Train</p>
+      <p class="desca1"><strong>Demon Slayer: <br>Kimetsu no Yaiba Mugen Train</strong></p>
       <p class="desca1"><span class="legen">Dub|Leg</span></p>
     </div>
 
       <div class="box">
         <span class="number">3</span>
-        <a class="a-img" href="seriesmodelo.html"><img class="top1 outline" src="imgs/series/Spy Family.jpe" alt="Dragin_Ball"></a>
+        <a class="a-img" href="seriesmodelo.html"><img class="top1 outline1" src="imgs/series/Spy Family.jpe" alt="Dragin_Ball"></a>
       </div>
       <div class="desca2">
-      <p class="desca2">SPY x FAMILY</p>
+      <p class="desca2"><strong>SPY x FAMILY</strong></p>
       <p class="desca2"><span class="legen">Dub|Leg</span></p>
     </div>
 
