--- a/crunch/filmeModelo.html
+++ b/crunch/filmeModelo.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap"rel="stylesheet" />
     <link rel="shortcut icon" href="imgs/filmes/icoon.ico" type="image/x-icon">
 
-    <title>Filme Modelo</title>
+    <title>Dragon Ball (Filmes) Dragon Ball Super: SUPER HERO </title>
   </head>
   <header>
     <nav class="navbar">
