--- a/crunch/seriesmodelo.html
+++ b/crunch/seriesmodelo.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
   <link rel="shortcut icon" href="imgs/filmes/icoon.ico" type="image/x-icon">
-  <title>Série Modelo</title>
+  <title>JUJUTSU KAISEN Ryomen Sukuna</title>
 </head>
 <header>
   <nav class="navbar">
