adição de 2 section

--- a/crunch/home.html
+++ b/crunch/home.html
@@ -33,7 +33,7 @@
 <body>
   <div class="Animeprin">
     <img class="banner" src="imgs/filme e serie modelo/jujutsu-kaisen (1).jpg" alt="banner_jujustu">
-    <a href="/"><img class="jujutsu" src="imgs/Jujutsu_Kaisen_logo.png" alt="jujutsu"></a>
+    <a href="/home"><img class="jujutsu" src="imgs/Jujutsu_Kaisen_logo.png" alt="jujutsu"></a>
     <img class="idade" src="imgs/nr16-auto.png" alt="Indicado para maiores de 16 anos">
     <p class="ling">◆ Dub | Leg</p>
     <p class="sinopse">Yuji Itadori come um dedo amaldiçoado para salvar um colega de turma<br> e agora Ryomen Sukuna, um terrível e poderoso feiticeiro conhecido como <br> o Rei das Maldições, habita na alma de Itadori. As maldições são terrores <br> sobrenaturais criados a partir das emoções humanas negativas.</p>
@@ -121,11 +121,17 @@
     </div>
   </section>
 
+  <section>
+    <div class="anuncio">
+      <a href="seriesmodelo.html"><img src="imgs/one piece frufru.png" alt="One_Piece"></a>
+    </div>
+  </section>
+
   <section class="serie_recent">
     <h2 class="tito">Animes Que Acabaram de Chegar</h2>
     <div class="serec_content">
       <div>
-        <a href="seriesmodelo.html""><img class=" film outline" src="imgs/series/hunter hunter.jpe" alt=""></a>
+        <a href="seriesmodelo.html"><img class=" film outline" src="imgs/series/hunter hunter.jpe" alt=""></a>
         <p class="titu">Hunter x Hunter</p>
         <p class="legenda">Legendado</p>
       </div>
@@ -157,7 +163,15 @@
         <p class="titu">Attack on Titan</p>
         <p class="legenda">Dub|Leg</p>
 
+        
+
       </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="promo">
+      <img class="promoImg" src="imgs/series/metalic rogue.jpe" alt="">
     </div>
   </section>
 
