finalmente acabamos tudo, Deus é Pai

--- a/crunch/home.html
+++ b/crunch/home.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="imgs/filmes/icoon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/Carrossell/style.css">
 </head>
 <header>
   <nav class="navbar">
@@ -31,15 +32,97 @@
 </header>
 
 <body>
-  <div class="Animeprin">
+  <div class="slider">
+    <div class="slides">
+      <input type="radio" name="radio-btn" id="radio1">
+      <input type="radio" name="radio-btn" id="radio2">
+      <input type="radio" name="radio-btn" id="radio3">
+      <input type="radio" name="radio-btn" id="radio4">
+      <input type="radio" name="radio-btn" id="radio5">
+      <input type="radio" name="radio-btn" id="radio6">
+
+
+      <div class="slide first">
+        <img src="/Carrossell/Carrossel/Blue lockk.jpg" alt="">
+        <img class="blue" src="/Carrossell/Logos/blue lock logo.png " alt="">
+        <img class="idadeprin" src="/Carrossell/idade/idadee 14.png" alt="">
+        <p class="lingprin">◆ Dub | Leg</p>
+        <p class="sino">Após sofrer um vexame na Copa do Mundo de 2018, a seleção japonesa sofre para se recompor. Falta ao <br> time um artilheiro, uma estrela capaz de guiá-los à vitória. Com o intuito de criar um atacante com fome de bola e <br> sede de vitória, capaz de virar jogos tidos como impossíveis, a Confederação Japonesa de Futebol reune 300 dos <br> melhores jogadores de base do país em um só lugar. Centenas de jovens vão se enfrentar numa batalha de <br> músculos e de egos para provar que são os melhores.
+        </p>
+      </div>
+      <div class="slide">
+        <img src="/Carrossell/Carrossel/dr.jpg" alt="">
+        <img class="doutor" src="/Carrossell/Logos/logo DR.png" alt="">
+        <img class="idadeprin" src="/Carrossell/idade/idadee 14.png" alt="">
+        <p class="lingprin">◆ Dub | Leg</p>
+        <p class="sino">Milhares de anos após um misterioso fenômeno transformar a humanidade inteira em pedra, desperta um garoto <br>extraordinariamente inteligente e motivado pela ciência - Senku Ishigami.
+          Diante de um mundo de pedra e do <br> colapso generalizado da civilização, Senku decide usar sua mente para reconstruir o mundo. Ao lado de Taiju Oki, <br> seu amigo de infância absurdamente forte, eles começam a reestabelecer a civilização do zero...
+          Representando os <br>s milhões de anos da história da ciência, desde a Idade da Pedra até os dias atuais, esta aventura científica sem <br> precedentes está prestes a começar!</p>
+      </div>
+      <div class="slide">
+        <img src="/Carrossell/Carrossel/jujutsu-kaisen.webp" alt="">
+        <img class="juju" src="/Carrossell/Logos/Jujutsu_Kaisen_logo.png" alt="">
+        <img class="idadeprin" src="/Carrossell/idade/nr16-auto.png" alt="">
+        <p class="lingprin">◆ Dub | Leg</p>
+        <p class="sino">Yuji Itadori come um dedo amaldiçoado para salvar um colega de turma
+          e agora Ryomen Sukuna,<br> um terrível e poderoso feiticeiro conhecido como
+          o Rei das Maldições, habita na alma de Itadori. <br>As maldições são terrores 
+          sobrenaturais criados a partir das emoções humanas negativas.</p>
+      </div>
+      <div class="slide">
+        <img src="/Carrossell/Carrossel/chainsaw man carrosselll.jpg" alt="">
+        <img class="blue " src="/Carrossell/Logos/logo chainsaw.png" alt="">
+        <img class="idadeprin" src="/Carrossell/idade/nr16-auto.png" alt="">
+        <p class="lingprin">◆ Dub | Leg</p>
+        <p class="sino">Denji é um adolescente que mora com Pochita, o Demônio da Motosserra. Por conta das dívidas que <br>herdou de seu pai, ele vive na miséria, exterminando outros demônios com Pochita para pagar as contas. <br> Até que, um dia, Denji é traído e morre. Em seus últimos momentos de consciência, ele firma um <br>contrato com Pochita e renasce como o Homem-Motosserra - um humano com coração de demônio.</p>
+      </div>
+      <div class="slide">
+        <img src="/Carrossell/Carrossel/shingeki carrossell.jpg" alt="">
+        <img class="shin" src="/Carrossell/Logos/logo shingeki.png" alt="">
+        <img class="idadeprin" src="/Carrossell/idade/nr16-auto.png" alt="">
+        <p class="lingprin">◆ Dub | Leg</p>
+        <p class="sino">Há várias décadas atrás, a humanidade foi quase exterminada pelo súbito aparecimento de seres humanoides, <br>conhecido como Titãs. Criaturas de tamanho enorme e de inteligência aparentemente baixa, que comiam humanos <br> por prazer. No entanto, um pequeno grupo de seres humanos sobreviveu no interior de uma cidade protegida por paredes <br> superiores a três vezes a altura dos maiores Titãs registados até à data. Durante 107 anos, a cidade fortificada foi testemunha <br> de ataques dos Titãs sem sucesso, até que um dia, o jovem Eren Jaeger e sua irmã adotiva, Mikasa Ackerman, foram <br> testemunhas da aparição de um Titã colossal, fazendo uma abertura em uma das paredes exteriores da cidade, <br> o que permitiu a entrada de um grande grupo de Titãs menores. Ambos os filhos presenciam o horror de ver <br> sua mãe sendo comida viva por um deles. Desde aquele dia, Eren jurou vingança contra cada um dos Titãs.</p>
+      </div>
+      <div class="slide">
+        <img src="/Carrossell/Carrossel/SPY FAMILY.jpg" alt="">
+        <img class="blue spy" src="/Carrossell/Logos/Spy_×_Family_logo.png" alt="">
+        <img class="idadeprin" src="/Carrossell/idade/idadee 14.png" alt="">
+        <p class="lingprin">◆ Dub | Leg</p>
+        <p class="sino">Há décadas, as nações de Ostania e Westalis promovem uma guerra fria sem fim. Para investigar os movimentos <br> do presidente de um importante partido político, Westalis mobiliza Twilight, seu melhor agente, a montar uma <br> família falsa e se infiltrar nos eventos sociais promovidos pela escola do filho do político. Mas por um acaso do <br> destino, Twilight acaba adotando Anya, uma jovem com poderes telepáticos, e se "casando" com Yor, uma <br> assassina profissional! Sem saberem das identidades uns dos outros, este trio incomum vai embarcar em aventuras <br> cheias de surpresas para garantir a paz mundial.</p>
+
+      </div>
+
+      <div class="navigation-auto">
+        <div class="auto-btn1"></div>
+        <div class="auto-btn2"></div>
+        <div class="auto-btn3"></div>
+        <div class="auto-btn4"></div>
+        <div class="auto-btn5"></div>
+        <div class="auto-btn6"></div>
+      </div>
+
+    </div>
+
+    <div class="navigation-bar">
+      <label class="manual-btn" for="radio1"></label>
+      <label class="manual-btn" for="radio2"></label>
+      <label class="manual-btn" for="radio3"></label>
+      <label class="manual-btn" for="radio4"></label>
+      <label class="manual-btn" for="radio5"></label>
+      <label class="manual-btn" for="radio6"></label>
+    </div>
+
+  </div>
+
+  <!-- <div class="Animeprin">
     <img class="banner" src="imgs/filme e serie modelo/jujutsu-kaisen (1).jpg" alt="banner_jujustu">
-    <a href="/home"><img class="jujutsu" src="imgs/Jujutsu_Kaisen_logo.png" alt="jujutsu"></a>
+    <a href="/Carrossell/index.html"><img class="jujutsu" src="imgs/Jujutsu_Kaisen_logo.png" alt="jujutsu"></a>
     <img class="idade" src="imgs/nr16-auto.png" alt="Indicado para maiores de 16 anos">
     <p class="ling">◆ Dub | Leg</p>
     <p class="sinopse">Yuji Itadori come um dedo amaldiçoado para salvar um colega de turma<br> e agora Ryomen Sukuna, um terrível e poderoso feiticeiro conhecido como <br> o Rei das Maldições, habita na alma de Itadori. As maldições são terrores <br> sobrenaturais criados a partir das emoções humanas negativas.</p>
     <a class="ver" href="/crunch/seriesmodelo.html"> <strong><span class="seta">▷</span> <span class="com">COMEÇAR A ASSISTIR S1 E1</span></strong></a>
     <img class="salvarr" src="imgs/filme e serie modelo/salvar laranja.png" alt="salvarL">
-  </div>
+  </div> -->
 
   <!-- conteudo principal -->
   <section class="top_3">
@@ -59,18 +142,18 @@
         <a class="a-img" href="filmeModelo.html"><img class="top1 outline1" src="imgs/filmes/Demon slayer mugen train.jpg" alt="Dragin_Ball"></a>
       </div>
       <div class="desca1">
-      <p class="desca1"><strong>Demon Slayer: <br>Kimetsu no Yaiba Mugen Train</strong></p>
-      <p class="desca1"><span class="legen">Dub|Leg</span></p>
-    </div>
+        <p class="desca1"><strong>Demon Slayer: <br>Kimetsu no Yaiba Mugen Train</strong></p>
+        <p class="desca1"><span class="legen">Dub|Leg</span></p>
+      </div>
 
       <div class="box">
         <span class="number">3</span>
         <a class="a-img" href="seriesmodelo.html"><img class="top1 outline1" src="imgs/series/Spy Family.jpe" alt="Dragin_Ball"></a>
       </div>
       <div class="desca2">
-      <p class="desca2"><strong>SPY x FAMILY</strong></p>
-      <p class="desca2"><span class="legen">Dub|Leg</span></p>
-    </div>
+        <p class="desca2"><strong>SPY x FAMILY</strong></p>
+        <p class="desca2"><span class="legen">Dub|Leg</span></p>
+      </div>
 
     </div>
   </section>
@@ -131,8 +214,8 @@
     <h2 class="tito">Animes Que Acabaram de Chegar</h2>
     <div class="serec_content">
       <div>
-        <a href="seriesmodelo.html"><img class=" film outline" src="imgs/series/hunter hunter.jpe" alt=""></a>
-        <p class="titu">Hunter x Hunter</p>
+        <a href="seriesmodelo.html"><img class=" film outline" src="imgs/series/Naruto.jpe" alt=""></a>
+        <p class="titu">Naruto Shippuden</p>
         <p class="legenda">Legendado</p>
       </div>
       <div>
@@ -147,9 +230,9 @@
 
       </div>
       <div>
-        <a href="seriesmodelo.html""><img class=" film outline" src="imgs/series/One piece.jpe" alt=""></a>
-        <p class="titu">One Piece</p>
-        <p class="legenda">Legendado</p>
+        <a href="seriesmodelo.html""><img class=" film outline" src="imgs/series/Demon Slayer.jpe" alt=""></a>
+        <p class="titu">Demon Slayer: <br>Kimetsu no Yaiba</p>
+        <p class="legenda">Dub|Leg</p>
 
       </div>
       <div>
@@ -163,7 +246,6 @@
         <p class="titu">Attack on Titan</p>
         <p class="legenda">Dub|Leg</p>
 
-        
 
       </div>
     </div>
@@ -171,7 +253,27 @@
 
   <section>
     <div class="promo">
-      <img class="promoImg" src="imgs/series/metalic rogue.jpe" alt="">
+      <a href="seriesmodelo.html"><img class="promoImg" src="imgs/hunterxhunter.jpe" alt="hunterxhunter"></a>
+      <div>
+        <h1>Hunter x Hunter</h1>
+        <p>
+          <span class="seriePromo">Série</span><span class="losangulo"> ◆</span> Legendado
+        </p>
+        <p>
+          Monstros amedrontadores, criaturas exóticas, riquezas vastas, tesouros misteriosos, terras vis e terras inexploradas... Gon parte em uma aventura para se tornar um caçador profissional que arrisca a própria vida em busca do desconhecido. Pelo caminho, ele conhece outros participantes da Prova dos Caçadores: Kurapika, Leorio e Killua. Será Gon capaz de vencer os grandes desafios da Prova de Caçadores e se tornar o melhor do mundo? Esta jornada selvagem e épica está prestes a começar!!
+        </p>
+        <a class="verr verPromo" href="/crunch/seriesmodelo.html"> <strong><span class="seta">▷</span> <span class="com">COMEÇAR A ASSISTIR S1 E1</span></strong></a>
+        <img class="btnAdd" src="imgs/adicionar a filaa.png" alt="">
+      </div>
+    </div>
+  </section>
+
+  <section class="fim">
+    <img class="gatinho" src="imgs/gatinho frufru.png" alt="gatinho se emaranhando">
+    <h3 class="txtFim">Ainda está procurando algo pra assistir?</h3>
+    <h3 class="txtFim proLado">Confira o nosso acervo completo</h3>
+    <div class="paibtn">
+      <a class="btnfim" href="todasasseries.html"><strong>VER TUDO</strong></a>
     </div>
   </section>
 
