--- a/crunch/seriesmodelo.html
+++ b/crunch/seriesmodelo.html
@@ -31,8 +31,7 @@
 </header>
 
 <body>
-  <img class="conteudo" src="imgs/filmes/jujutsu_play.jpg" alt="player">
-  <img class="play" src="imgs/filme e serie modelo/player.png" alt="player2">
+  <iframe class="video" width="100%" height="500" src="https://www.youtube.com/embed/ynr6gnyu9NE?si=xX8m7UbJpMHXQbAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <div class="geral">
     <section class="modelo">
       <img class="modeloLeft" src="imgs/filme e serie modelo/proximo ep.PNG" alt="próximo ep" />
