--- a/crunch/todasasseries.html
+++ b/crunch/todasasseries.html
@@ -49,82 +49,82 @@
   <div class="container">
     <div>
       <!-- vou fzr assim mas acho que deve ter uma tag mais semântica pra isso -->
-      <a href="seriesmodelo.html"><img class="film" src="imgs/series/Blue Lock.jpe" alt=""></a>
+      <a href="seriesmodelo.html"><img class="film outline" src="imgs/series/Blue Lock.jpe" alt=""></a>
       <p>BLUE LOCK</p>
       <p class="leg">Dub | Leg</p>
     </div>
 
     <div>
-      <a href="seriesmodelo.html"><img class="film" src="imgs/series/chainsaw man.jpe" alt=""></a>
+      <a href="seriesmodelo.html"><img class="film outline" src="imgs/series/chainsaw man.jpe" alt=""></a>
       <p>Chainsaw Man</p>
       <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
-      <a href="seriesmodelo.html"><img class="film" src="imgs/series/Dragon Ball.jpe" alt=""></a>
+      <a href="seriesmodelo.html"><img class="film outline" src="imgs/series/Dragon Ball.jpe" alt=""></a>
       <p>Dragon Ball Super</p>
       <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
-      <a href="seriesmodelo.html"><img class="film" src="imgs/series/Dr.Stone.jpe" alt=""></a>
+      <a href="seriesmodelo.html"><img class="film outline" src="imgs/series/Dr.Stone.jpe" alt=""></a>
       <p>Dr. STONE</p>
       <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
-      <a href="seriesmodelo.html"><img class="film" src="imgs/series/hunter hunter.jpe" alt=""></a>
+      <a href="seriesmodelo.html"><img class="film outline" src="imgs/series/hunter hunter.jpe" alt=""></a>
       <p>Hunter x Hunter</p>
       <p class="leg">Legendado</p>
 
     </div>
 
     <div>
-      <a href="seriesmodelo.html"><img class="film" src="imgs/series/Spy Family.jpe" alt=""></a>
+      <a href="seriesmodelo.html"><img class="film outline" src="imgs/series/Spy Family.jpe" alt=""></a>
       <p>SPY x FAMILY</p>
       <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
-      <a href="seriesmodelo.html"><img class="film" src="imgs/series/Shingeki.jpe" alt=""></a>
+      <a href="seriesmodelo.html"><img class="film outline" src="imgs/series/Shingeki.jpe" alt=""></a>
       <p>Attack on Titan</p>
       <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
-      <a href="seriesmodelo.html"><img class="film" src="imgs/my-hero.jpg" alt=""></a>
+      <a href="seriesmodelo.html"><img class="film outline" src="imgs/my-hero.jpg" alt=""></a>
       <p>My Hero Academia</p>
       <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
-      <a href="seriesmodelo.html"><img class="film" src="imgs/series/One piece.jpe" alt=""></a>
+      <a href="seriesmodelo.html"><img class="film outline" src="imgs/series/One piece.jpe" alt=""></a>
       <p>One Piece</p>
       <p class="leg">Legendado</p>
     </div>
 
     <div>
-      <a href="seriesmodelo.html"><img class="film" src="imgs/series/Jujutsu.jpe" alt=""></a>
+      <a href="seriesmodelo.html"><img class="film outline" src="imgs/series/Jujutsu.jpe" alt=""></a>
       <p>JUJUTSU KAISEN</p>
       <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
-      <a href="seriesmodelo.html"><img class="film" src="imgs/series/Naruto.jpe" alt=""></a>
+      <a href="seriesmodelo.html"><img class="film outline" src="imgs/series/Naruto.jpe" alt=""></a>
       <p>Nauto Shippuden</p>
       <p class="leg">Legendado</p>
 
     </div>
 
     <div>
-      <a class="demon" href="seriesmodelo.html"><img class="film" src="imgs/series/Demon Slayer.jpe" alt=""></a>
+      <a class="demon" href="seriesmodelo.html"><img class="film outline" src="imgs/series/Demon Slayer.jpe" alt=""></a>
       <p>Demon Slayer: <br> Kimetsu no Yaiba</p>
       <p class="leg">Dub | Leg</p>
 
