--- a/crunch/todosFilmes.html
+++ b/crunch/todosFilmes.html
@@ -50,83 +50,83 @@
   <div class="container">
     <div>
       <!-- vou fzr assim mas acho que deve ter uma tag mais semântica pra isso -->
-      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/DBS_1.jpg" alt="Dragon Ball Super Hero"></a>
+      <a href="/crunch/filmeModelo.html"><img class="film outline" src="imgs/filmes/DBS_1.jpg" alt="Dragon Ball Super Hero"></a>
       <p>Dragon Ball Super: <br>SUPER HERO</p>
       <p class="leg">Dub | Leg</p>
     </div>
 
     <div>
-      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Full metal the movie.jpg" alt="Full metal the movie"></a>
+      <a href="/crunch/filmeModelo.html"><img class="film outline" src="imgs/filmes/Full metal the movie.jpg" alt="Full metal the movie"></a>
       <p>Fullmetal Alchemist: <br>The Conqueror of Shamballa</p>
       <p class="leg">Legendado</p>
 
     </div>
 
     <div>
-      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Demon slayer mugen train.jpg" alt="Demon slayer mugen train"></a>
+      <a href="/crunch/filmeModelo.html"><img class="film outline" src="imgs/filmes/Demon slayer mugen train.jpg" alt="Demon slayer mugen train"></a>
       <p>Demon Slayer: <br>Kimetsu no Yaiba Mugen Train</p>
       <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
-      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/Oddtaxi.jpg" alt="Oddtaxi"></a>
+      <a href="/crunch/filmeModelo.html"><img class="film outline" src="imgs/Oddtaxi.jpg" alt="Oddtaxi"></a>
       <p>ODDTAXI in the woods</p>
       <p class="leg">Legendado</p>
 
     </div>
 
     <div>
-      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/The stranger by the shore.jpe" alt="The stranger by the shore"></a>
+      <a href="/crunch/filmeModelo.html"><img class="film outline" src="imgs/filmes/The stranger by the shore.jpe" alt="The stranger by the shore"></a>
       <p>The Stranger by the Shore </p>
       <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
-      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/I_ve Always Liked You Eu sempre amei você.jpg" alt="I_ve Always Liked You"></a>
+      <a href="/crunch/filmeModelo.html"><img class="film outline" src="imgs/filmes/I_ve Always Liked You Eu sempre amei você.jpg" alt="I_ve Always Liked You"></a>
       <p>I've always liked you</p>
       <p class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
-      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Jujutsu 0.jpg" alt="Jujutsu"></a>
+      <a href="/crunch/filmeModelo.html"><img class="film outline" src="imgs/filmes/Jujutsu 0.jpg" alt="Jujutsu"></a>
       <p>JUJUTSU KAISEN 0</p>
       <Pp class="leg">Dub | Leg</p>
 
     </div>
 
     <div>
-      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Given-the-movie.jpg" alt="Given-the-movie"></a>
+      <a href="/crunch/filmeModelo.html"><img class="film outline" src="imgs/filmes/Given-the-movie.jpg" alt="Given-the-movie"></a>
       <p>Given - The Movie</p>
       <p class="leg">Legendado</p>
 
     </div>
 
     <div>
-      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Hakubo.jpe" alt="Hakubo"></a>
+      <a href="/crunch/filmeModelo.html"><img class="film outline" src="imgs/filmes/Hakubo.jpe" alt="Hakubo"></a>
       <p>Hakubo</p>
       <p class="leg">Legendado</p>
 
     </div>
 
     <div>
-      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Goblin slayer.jpg" alt="Goblin slayer"></a>
+      <a href="/crunch/filmeModelo.html"><img class="film outline" src="imgs/filmes/Goblin slayer.jpg" alt="Goblin slayer"></a>
       <p>GOBLIN SLAYER <br>Goblin's Crown</p>
       <p class="leg">Legendado</p>
 
     </div>
 
     <div>
-      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/filmes/Haikyu-the-movie.jpg" alt="Haikyu-the-movie"></a>
+      <a href="/crunch/filmeModelo.html"><img class="film outline" src="imgs/filmes/Haikyu-the-movie.jpg" alt="Haikyu-the-movie"></a>
       <p>HAIKYU!! <br>A Batalha de Conceitos</p>
       <p class="leg">Legendado</p>
 
     </div>
 
     <div>
-      <a href="/crunch/filmeModelo.html"><img class="film" src="imgs/Suzumee.jpg" alt="Suzumee"></a>
+      <a href="/crunch/filmeModelo.html"><img class="film outline" src="imgs/Suzumee.jpg" alt="Suzumee"></a>
       <p>Suzume</p>
       <P class="leg">Dub | Leg</P>
 
