--- a/crunch/filmeModelo.html
+++ b/crunch/filmeModelo.html
@@ -31,8 +31,9 @@
   </header>
 
   <body>
-    <img class="conteudo" src="imgs/filmes/DragonBall_play.jpg" alt="player">
-  <img class="play" src="imgs/filme e serie modelo/player.png" alt="player2">
+    <iframe class="video" width="100%" height="500" src="https://www.youtube.com/embed/HNY3rlgfxvA?si=8WqFCICMbLGyIg0H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <!-- <img class="conteudo" src="imgs/filmes/DragonBall_play.jpg" alt="player">
+  <img class="play" src="imgs/filme e serie modelo/player.png" alt="player2"> -->
     <div class="geral">
       <section class="modelo">
         <img
